| Bug #53906 | Stray semicolon in my_sys.h corrupts macro function definition of MY_INIT | ||
|---|---|---|---|
| Submitted: | 22 May 2010 0:30 | Modified: | 14 Oct 2010 15:30 |
| Reporter: | Dave Kelly | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: C API (client library) | Severity: | S3 (Non-critical) |
| Version: | 5.1.48-bzr | OS: | Any (Windows, Mac OS X) |
| Assigned to: | Davi Arnaut | CPU Architecture: | Any |
| Tags: | includes, my_sys.h, sdk, syntax error | ||
[22 May 2010 0:32]
Dave Kelly
corrected misspelling of the word function in synopsis.
[22 May 2010 9:15]
Valeriy Kravchuk
include/mysql/my_sys.h in 5.1.48 from bzr still has this exact definition.
[8 Jun 2010 19:21]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/110547 2871 Davi Arnaut 2010-06-08 Bug#53906: Stray semicolon in my_sys.h corrupts macro function definition of MY_INIT @ include/my_sys.h Remove stray semicolon.
[8 Jun 2010 21:02]
Davi Arnaut
Queued to mysql-5.0-bugteam and up.
[17 Jun 2010 6:14]
Bugs System
Pushed into 5.5.5-m3 (revid:alexey.kopytov@sun.com-20100615145247-8bj0vmuqlotbqsn9) (version source revid:davi.arnaut@sun.com-20100608234425-5qfer6cj1766eme0) (merge vers: 5.5.5-m3) (pib:16)
[17 Jun 2010 6:18]
Bugs System
Pushed into mysql-next-mr (revid:alik@sun.com-20100615150216-cubqoyn1fj9b6a2p) (version source revid:alik@ibmvm-20100610103252-to5miyvcox8lnmgx) (pib:16)
[7 Jul 2010 18:36]
Paul DuBois
Noted in 5.5.5 changelog. The definition of the MY_INIT macro in my_sys.h included an extraneous semicolon, which could cause compilation failure. Setting report to Need Merge pending further pushes.
[19 Jul 2010 14:37]
Bugs System
Pushed into 5.1.49 (revid:build@mysql.com-20100719143034-omcma40sblwmay3x) (version source revid:davi.arnaut@sun.com-20100608211418-83wcxurgel78t8u6) (merge vers: 5.1.48) (pib:16)
[19 Jul 2010 19:18]
Paul DuBois
Noted in 5.1.49 changelog.
[2 Aug 2010 7:49]
Bugs System
Pushed into 5.0.92 (revid:georgi.kodinov@oracle.com-20100802074824-5201e4ppst9t3yqt) (version source revid:davi.arnaut@sun.com-20100608192054-d5l52g5me8d4j0g2) (merge vers: 5.0.92) (pib:18)
[2 Aug 2010 19:45]
Paul DuBois
Noted in 5.0.92 changelog.
[14 Oct 2010 8:30]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.51-ndb-7.0.20 (revid:martin.skold@mysql.com-20101014082627-jrmy9xbfbtrebw3c) (version source revid:vasil.dimov@oracle.com-20100531152341-x2d4hma644icamh1) (merge vers: 5.5.5-m3) (pib:21)
[14 Oct 2010 8:46]
Bugs System
Pushed into mysql-5.1-telco-6.3 5.1.51-ndb-6.3.39 (revid:martin.skold@mysql.com-20101014083757-5qo48b86d69zjvzj) (version source revid:vasil.dimov@oracle.com-20100531152341-x2d4hma644icamh1) (merge vers: 5.5.5-m3) (pib:21)
[14 Oct 2010 9:00]
Bugs System
Pushed into mysql-5.1-telco-6.2 5.1.51-ndb-6.2.19 (revid:martin.skold@mysql.com-20101014084420-y54ecj85j5we27oa) (version source revid:vasil.dimov@oracle.com-20100531152341-x2d4hma644icamh1) (merge vers: 5.5.5-m3) (pib:21)
[14 Oct 2010 15:30]
Jon Stephens
Already documented in the 5.1.49 changelog; no new changelog entries required. Setting back to Closed state.
[21 Dec 2010 12:34]
MySQL Verification Team
See http://bugs.mysql.com/bug.php?id=59080.

Description: Line 40 in the file include/my_sys.h was originally as follows: #define MY_INIT(name); { my_progname= name; my_init(); } Note the semicolon immediately following MY_INIT(name), which is invalid syntax for this macro function definition. After removing said semicolon and configuring the Apache Runtime (APR) source includes DEFINE's related to the apr_dbd_mysql project (fixed bugs there too, but that's Apache stuff), I was able successfully build the project with no errors or warnings. How to repeat: Include the MySQL API SDK includes and libraries files in an Apache web server build that incorporates the apr_dbd_mysql database libraries project. Suggested fix: Remove the stray semicolon referenced above.