Bug#53906: Stray semicolon in my_sys.h corrupts macro function definition of MY_INIT